# BuraqManager

./: .gitignore  README.md  backend.py  buraqmanager.db  dev_1.0.py  main.py  pyproject.toml  setup.bat
.github/workflows/: ci-cd.yml
tests/: __init__.py  test_backend.py
