[project]
name = "buraqmanager"
version = "0.1.0"
description = ""
authors = [
    {name = "mehassanhmood",email = "mehassanhmood@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
