[project]
name = "buraqmanager"
version = "0.1.0"
description = "A task management application built with PyQt6"
authors = [
    {name = "mehassanhmood",email = "mehassanhmood@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pyinstaller (>=6.14.2,<7.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "pytest (>=7.4.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.poetry]
package-mode = false
